docs: Correctly write "Add-in" in German.

--- a/_posts/2025-06-18-v4.20.0.de.md
+++ b/_posts/2025-06-18-v4.20.0.de.md
@@ -22,7 +22,7 @@ Set-OutlookSignatures wird jetzt mit UTF.Unknown für die Codierungserkennung ge
 ## Neue Funktionen
 - Unterstützung für mandantenübergreifenden Zugriff und mandantenfähige Organisationen.
 - Automatische Erkennung der HTML-Kodierung und UTF-8-Konvertierung.
-- Anpassbarer Benachrichtigungstext im Outlook-Add-In.
+- Anpassbarer Benachrichtigungstext im Outlook Add-in.
 
 ## Verbesserungen
 - Reduzierte Entra-ID-Drosselung durch optimierte Token-Aktualisierungslogik.
