--- a/_posts/2025-08-12-v4.20.4.de.md
+++ b/_posts/2025-08-12-v4.20.4.de.md
@@ -13,7 +13,7 @@ sitemap_changefreq: monthly
 ---
 ## Behebung von Änderungen in der Roaming-Signaturen-API von Microsoft
 - Hinzufügen einer Problemumgehung für interne Probleme von Microsoft mit der Roaming-Signaturen-API, die beim Hochladen von Roaming-Signaturen in Postfächer, die nicht denen des angemeldeten Benutzers entsprechen (insbesondere im SimulateAndDeploy-Modus), zu folgendem Fehler führen würden. Das Protokoll würde den Fehler 'Der Antwortstatuscode für die Aktion https://localhost:444/owa/service.svc?action=SanitizeHtml \u0027SanitizeHtml\u0027 lautet InternalServerError. ReasonPhrase:Internal Server Error' enthalten.
-- Hinzufügen von Hinweisen zu möglichen Ursachen für leere Signaturlisten in der Protokollausgabe des Outlook-Add-Ins.
+- Hinzufügen von Hinweisen zu möglichen Ursachen für leere Signaturlisten in der Protokollausgabe des Outlook Add-ins.
 
 Eine umfassende Liste aller Änderungen, Abhängigkeiten und Korrekturen finden Sie im offiziellen [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
 
