--- a/_posts/2025-08-15-v4.21.0.de.md
+++ b/_posts/2025-08-15-v4.21.0.de.md
@@ -3,7 +3,7 @@ layout: "post"
 lang: "de"
 locale: "de"
 title: "Neue Version v4.21.0"
-description: "Neue Funktionen für das Outlook-Add-In"
+description: "Neue Funktionen für das Outlook-Add-in"
 published: true
 tags: ["new release"]
 slug: "v4-21-0"
@@ -11,10 +11,10 @@ permalink: "/blog/:year/:month/:day/:slug"
 sitemap_priority: 0.5
 sitemap_changefreq: monthly
 ---
-## Neue Funktionen für das Outlook-Add-In
+## Neue Funktionen für das Outlook-Add-in
 Neue LaunchEvents und benutzerdefinierter Code zur Auswahl von Signaturen:
 - Reagiert auf die Ereignisse OnMessageRecipientsChanged und OnAppointmentAttendeesChanged.
-- Fügen Sie dem Add-In benutzerdefinierten Code hinzu, um direkt zu beeinflussen, welche Signatur verwendet wird.  
+- Fügen Sie dem Add-in benutzerdefinierten Code hinzu, um direkt zu beeinflussen, welche Signatur verwendet wird.  
   Sie können beispielsweise eine bestimmte Signatur festlegen…
     - …wenn es nur interne Empfänger gibt, oder eine andere Signatur, wenn es externe Empfänger gibt
     - …abhängig von der Absender-E-Mail-Adresse
@@ -24,7 +24,7 @@ Neue LaunchEvents und benutzerdefinierter Code zur Auswahl von Signaturen:
     - …abhängig vom Betreff
     - …oder einer anderen Bedingung, die sich aus den im Objekt 'customRulesProperties' verfügbaren Informationen ableitet
 
-Weitere Informationen finden Sie unter '`.\sample code\CustomRulesCode.js`' im Outlook-Add-In-Ordner.
+Weitere Informationen finden Sie unter '`.\sample code\CustomRulesCode.js`' im Outlook-Add-in-Ordner.
 
 Eine umfassende Liste aller Änderungen, Abhängigkeiten und Korrekturen finden Sie im offiziellen [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
 
