--- a/_posts/2025-12-22-v4.25.0.de.md
+++ b/_posts/2025-12-22-v4.25.0.de.md
@@ -28,11 +28,11 @@ Set-OutlookSignatures bietet jetzt verbesserte proaktive Warnungen, um potenziel
 
 - **GPO-Überschreibungen:** Das Skript warnt Sie, wenn eine Gruppenrichtlinienobjekt-Einstellung Vorrang vor den vom Skript festgelegten Registrierungswerten hat, z. B. '`DisableRoamingSignatures`'.
 - **Ausfalssicherer Zugriff auf Graph-API:** Wir haben Graph-API-Abfragen robuster gemacht, indem wir automatische Wiederholungsversuche nach fünf Sekunden implementiert haben, um kurze Aussetzer im Netzwerk oder Rechenzentrum auszugleichen.
-- **Vorlagenprüfung:** Sie erhalten Warnungen bei nicht standardmäßigen Bildformaten (außerhalb von JPG, PNG und GIF) oder Signaturen mit mehr als 30.000 Zeichen, die beim Start von Outlook-Add-Ins zu Fehlern führen können.
+- **Vorlagenprüfung:** Sie erhalten Warnungen bei nicht standardmäßigen Bildformaten (außerhalb von JPG, PNG und GIF) oder Signaturen mit mehr als 30.000 Zeichen, die beim Start von Outlook Add-ins zu Fehlern führen können.
 
 
 ## Updates für Benutzer des Benefactor Circle Add-ons
-Das Benefactor Circle Add-on und das Outlook Add-In wurden um mehrere wichtige Verbesserungen für erweiterte Bereitstellungen erweitert:
+Das Benefactor Circle Add-on und das Outlook Add-in wurden um mehrere wichtige Verbesserungen für erweiterte Bereitstellungen erweitert:
 
 - **Automatische Einbettung von Bildern:** Bilder werden nun beim Einrichten von Outlook-Websignaturen (klassisch und Roaming) unabhängig von globalen Parametern eingebettet, wodurch auch bei Standardsignaturen eine hochwertige Anzeige gewährleistet ist.
 - **Verbesserte Bereinigungslogik:** Der Parameter '`DeleteScriptCreatedSignaturesWithoutTemplate`' entfernt nun veraltete Signaturen beim Umschalten der Roaming-Signatureinstellungen noch konsequenter.
