--- a/_posts/2025-09-05-v4.22.0.de.md
+++ b/_posts/2025-09-05-v4.22.0.de.md
@@ -3,7 +3,7 @@ layout: "post"
 lang: "de"
 locale: "de"
 title: "Neue Version v4.22.0"
-description: "Weitere Anpassungsmöglichkeiten für das Outlook-Add-In"
+description: "Weitere Anpassungsmöglichkeiten für das Outlook-Add-in"
 published: true
 tags: ["new release"]
 slug: "v4-22-0"
@@ -11,8 +11,8 @@ permalink: "/blog/:year/:month/:day/:slug"
 sitemap_priority: 0.5
 sitemap_changefreq: monthly
 ---
-## Weitere Anpassungsmöglichkeiten für das Outlook-Add-In
-Die Version 4.22.0 bringt wichtige Änderungen und Anpassungsfunktionen für das Outlook Add-In:
+## Weitere Anpassungsmöglichkeiten für das Outlook-Add-in
+Die Version 4.22.0 bringt wichtige Änderungen und Anpassungsfunktionen für das Outlook Add-in:
 - Mit benutzerdefinierten Regeln kann nun mithilfe der neuen Eigenschaft 'customRulesResultSignatureBody' (verfügbar für Exchange Online) ein vollständig angepasster Signaturtext festgelegt werden.
 - Die Eigenschaften '`graphAccessToken`' und '`graphApiEndpoint`' wurden zu den benutzerdefinierten Regeln hinzugefügt, sodass die Graph-API für erweiterte Logik (z. B. Benutzereigenschaften, Gruppenmitgliedschaft) direkt abgefragt werden kann.
 - Der Text der Benachrichtigung nach der Signatur kann mit der neuen Variablen '`customRulesResultNotification`' festgelegt werden.
@@ -22,11 +22,11 @@ Die Version 4.22.0 bringt wichtige Änderungen und Anpassungsfunktionen für das
   - 'customRulesProperties.itemIsForward'
   - 'customRulesProperties.itemIsHtml'
   - 'customRulesProperties.itemIsText'
-- Es wurde die Möglichkeit hinzugefügt, eine benutzerdefinierte ID für das Add-In zu definieren, wodurch mehrere unabhängige Konfigurationen in derselben Umgebung möglich sind.
+- Es wurde die Möglichkeit hinzugefügt, eine benutzerdefinierte ID für das Add-in zu definieren, wodurch mehrere unabhängige Konfigurationen in derselben Umgebung möglich sind.
 
 ## Weitere Aktualisierungen
 - Es wurde eine Problemumgehung für das Problem in Outlook on the web und New Outlook für Windows hinzugefügt, das dazu führte, dass mehrere Signaturen zu Terminen hinzugefügt wurden.
-- Das Add-In muss nun zwingend die Graph-API für Exchange Online-Postfächer verwenden, um die Abkündigung von EWS vorzubereiten.
+- Das Add-in muss nun zwingend die Graph-API für Exchange Online-Postfächer verwenden, um die Abkündigung von EWS vorzubereiten.
 - Die Ausgabevariable für benutzerdefinierte Regeln wurde von '`customRulesProperties`'
 
 ## Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen?
