docs: remove section numbers

--- a/_drafts/2026-06-17-hot-tips.en.md
+++ b/_drafts/2026-06-17-hot-tips.en.md
@@ -19,7 +19,7 @@ The days are long, the sun is high, and your email signature should shine just a
 With Set-OutlookSignatures, you can automate all of this, without sweating.
 
 Make your summer emails sizzle!
-- [Allowed tags](/details#71-allowed-tags) for template assignment
+- [Allowed tags](/details#allowed-tags) for template assignment
 - [How do I alternate banners and other images in signatures?](/faq#how-do-i-alternate-banners-and-other-images-in-signatures)
 
 
